Fix mobile occasions heading spacing and revert item-1 title offset

--- a/sass/blocks/_occasions.scss
+++ b/sass/blocks/_occasions.scss
@@ -330,7 +330,7 @@
 	.occasions-block .why-us-heading {
 		display: flex;
 		flex-wrap: wrap;
-		margin-bottom: 0;
+		margin-bottom: 0 !important;
 		padding-bottom: 0;
 	}
 
@@ -425,7 +425,6 @@
 		min-height: 310px;
 	}
 
-	.occasions-block .why-us-item.why-us-item-1 .why-us-item-title,
 	.occasions-block .why-us-item.why-us-item-2 .why-us-item-title,
 	.occasions-block .why-us-item-3 .why-us-item-title,
 	.occasions-block .why-us-item-4 .why-us-item-title,
